@@ -23,6 +23,7 @@ import in.erail.glue.factory.DefaultConfigSerializationFactory;
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -34,6 +35,8 @@ import org.apache.commons.csv.CSVParser;
 import org.apache.commons.csv.CSVRecord;
 
 public class Util {
+
+  private static final boolean IS_WINDOWS = System.getProperty("os.name").toLowerCase().contains("windows");
 
   private static final Logger logger = LogManager.getLogger(Util.class.getCanonicalName());
   private static final MetricRegistry metricRegistry;
@@ -48,6 +51,10 @@ public class Util {
     metricRegistry = SharedMetricRegistries.getOrCreate(metricRegistryName);
   }
 
+  public static boolean isOSWindows(){
+    return IS_WINDOWS;
+  }
+  
   public static String buildSetPropertyName(String pProperty) {
     return "set" + pProperty.substring(0, 1).toUpperCase() + pProperty.substring(1, pProperty.length());
   }
@@ -108,11 +115,16 @@ public class Util {
 
     try {
       Class clzz = Class.forName(pClass);
-      inst = clzz.newInstance();
-    } catch (ClassNotFoundException | InstantiationException | IllegalAccessException ex) {
+      inst = clzz.getDeclaredConstructor().newInstance();
+    } catch (ClassNotFoundException 
+            | InstantiationException 
+            | IllegalAccessException 
+            | NoSuchMethodException 
+            | SecurityException 
+            | IllegalArgumentException 
+            | InvocationTargetException ex) {
       throw new RuntimeException(ex);
-    }
-
+    } 
     return inst;
   }
 
@@ -137,10 +149,10 @@ public class Util {
   }
 
   /**
-   * Get property value from Java System Properties, if not found
-   * then get it form environment variable.
+   * Get property value from Java System Properties, if not found then get it form environment variable.
+   *
    * @param pName Name of system property
-   * @param pDefault  Default value
+   * @param pDefault Default value
    * @return Return environment value
    */
   public static String getEnvironmentValue(String pName, String pDefault) {
